[project]
name = "birth-chat"
version = "0.1.0"
description = "Telegram pregnancy companion bot powered by Claude"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.52.0",
    "python-telegram-bot>=22.0",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
